fix header logo z-index

--- a/src/components/MobileMenu/styles.module.scss
+++ b/src/components/MobileMenu/styles.module.scss
@@ -7,7 +7,7 @@
     right: 30%;
     bottom: 0;
     min-width: 286px;
-    z-index: 100;
+    z-index: 999999;
     padding: 35px 18px;
     display: flex;
     flex-direction: column;
